<resources>
    <string name="app_name">towaso</string>
    <string name="not_any_account_yet_create">Not any account yet,Create</string>
    <string name="area">Area</string>
    <string name="passwords">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="emails">Email</string>
    <string name="phone">Phone</string>
    <string name="addresss">Address</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="landmark">landmark</string>
    <string name="locality">locality</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="accept_request">Accept Request</string>
</resources>
