<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkerRegisterActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:textAlignment="center"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/address"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="157dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/phone"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="218dp"
        android:ems="10"
        android:hint="@string/area"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:textAlignment="center"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="248dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/password"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/sign_up"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="175dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />
</RelativeLayout>