<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkerLogin">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:textAlignment="center"
        android:background="@drawable/inputs"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:background="@drawable/inputs"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/button"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="189dp"
        android:background="@android:color/background_dark"
        android:text="@string/login"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="123dp"
        android:text="@string/not_any_account_yet_create"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />
</RelativeLayout>